--- a/forside/index.html
+++ b/forside/index.html
@@ -7,36 +7,50 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- <img id="flower1" src="../img/flower1.png" alt="blomst">
+  -->
 
-    <img id="flower1" src="../img/flower1.png" alt="blomst">
+    <!-- <img id="leaf1" src="../img/leaf.png" alt="leaf">
+ -->
 
-    <img id="leaf1" src="../img/leaf.png" alt="leaf">
 
-<h2 id="overskrift1">Vi gifter oss!</h2>
-<div id="overskrift">
-    <h1 id="overskrift2">Ragnhild & Vetle</h1>
-    <p class="underoverskrift2">15. august 2026</p>
-    <p class="underoverskrift2">Nordre Skøyen Gård</p>
-</div>
+    <img class="flower" id="pinkflower1" src="../img/pinkflower.png" alt="">
+    <img class="flower" id="pinkflower2" src="../img/pinkflower.png" alt=""> 
+    <img class="flower" id="pinkflower3" src="../img/pinkflower.png" alt=""> 
 
+    <img class="flower" id="whiteflower1" src="../img/whiteflower.png" alt="">
+    <img class="flower" id="whiteflower2" src="../img/whiteflower.png" alt="">
+
+    <img class="flower" id="blueflower1" src="../img/blueflower.png" alt="">
+    <img class="flower" id="blueflower2" src="../img/blueflower.png" alt="">
+
+    <img class="flower" id="orangeflower1" src="../img/orangeflower.png" alt="">
+    <img class="flower" id="orangeflower2" src="../img/orangeflower.png" alt="">
 <nav class="navbar">
     <ul class="navlist">
-        <li><a id="forside" href="../forside/index.html">Forside</a></li>
-        <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
-        <li><a id="sted" href="../sted/sted.html">Sted</a></li>
+        <li><a id="forside" href="../forside/index.html">FORSIDE</a></li>
+        <li><a id="registrering" href="../registrering/registrering.html">REGISTRERING</a></li>
+        <li><a id="sted" href="../sted/sted.html">STED</a></li>
     </ul>
 </nav>
+
+
+<div id="overskrift">
+    <h1 id="overskrift2">VETLE & RAGNHILD</h1>
+    <p class="underoverskrift2">15.08.2026</p>
+    <!-- <p class="underoverskrift2">KAMPEN KIRKE</p> -->
+    <h3 class="underoverskrift2">VELKOMMEN TIL VÅRT BRYLLUP!</h3>
+</div>
+
 
 <div class="imgcontainer">
     <img src="hovedbilde.jpg" alt="Bilde av Rag&Vetle">
 </div>
 
 <div id="invitasjon">
-    <h1>Vi ønsker deg hjertelig velkommen til vårt bryllup!</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias magnam ex omnis, sunt esse atque itaque cupiditate aliquid, non dolorum minima sequi? Quidem laudantium dolorum facilis porro sed aut reprehenderit.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias magnam ex omnis, sunt esse atque itaque cupiditate aliquid, non dolorum minima sequi? Quidem laudantium dolorum facilis porro sed aut reprehenderit.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias magnam ex omnis, sunt esse atque itaque cupiditate aliquid, non dolorum minima sequi? Quidem laudantium dolorum facilis porro sed aut reprehenderit.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias magnam ex omnis, sunt esse atque itaque cupiditate aliquid, non dolorum minima sequi? Quidem laudantium dolorum facilis porro sed aut reprehenderit.</p>
+    <h3>VI ØNSKER DEG HJERTELIG VELKOMMEN TIL VÅRT BRYLLUP</h3>
+    <P>VIELSE KL. 14.30 I KAMPEN KIRKE, ETTERFULGT AV MIDDAG OG FEST PÅ NORDRE SKØYEN HOVEDGÅRD</P>
+    
 </div>
 
 <div id="regbutton">
