--- a/sted/sted.html
+++ b/sted/sted.html
@@ -8,26 +8,32 @@
   </head>
   <body>
     
-    <div>
+    <!-- <div>
     <h1 id="overskrift">Ragnhild & Vetle</h1>
-</div>
+</div> -->
+
+
+    <!-- <img id="flower1" src="../img/flower1.png" alt="blomst"> -->
+
 <nav class="navbar">
     <ul class="navlist">
-        <li><a id="forside" href="../forside/index.html">Forside</a></li>
-        <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
-        <li><a id="sted" href="../sted/sted.html">Sted</a></li>
+        <li><a id="forside" href="../forside/index.html">FORSIDE</a></li>
+        <li><a id="registrering" href="../registrering/registrering.html">REGISTRERING</a></li>
+        <li><a id="sted" href="../sted/sted.html">STED</a></li>
     </ul>
 </nav>
-
+   <div>
+    <h1 id="overskrift">VETLE OG RAGNHILD</h1>
+</div>
 <br>
 
 <div id="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2000.4836135687492!2d10.824771977501673!3d59.90752086460541!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416fa75fffd9e5%3A0xd737cc866a8356c1!2sNordre%20Sk%C3%B8yen%20Hovedg%C3%A5rd!5e0!3m2!1sno!2sno!4v1748866771990!5m2!1sno!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <div class="info">
-        <h2>Nordre Skøyen Gård</h2>
+        <h2>Kampen kirke</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eum harum reiciendis ab, temporibus est nisi consectetur, molestiae dignissimos mollitia voluptatum ducimus! Itaque asperiores maiores alias eius libero repellat reiciendis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic perferendis aliquid rerum quasi iure voluptate ullam magni, suscipit omnis illo nostrum recusandae sed ipsam illum! Doloribus, ex? Voluptatem, accusamus cum!</p>
+        <h2>Nordre Skøyen hovedgård</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, aperiam facilis autem consectetur, itaque eos voluptas ipsa commodi facere laborum est suscipit neque aliquid aspernatur iusto necessitatibus repellat! Doloribus, tempora.</p>
     </div>
 </div>
