--- a/registrering/registrering.html
+++ b/registrering/registrering.html
@@ -24,8 +24,9 @@
 
 <br>
 <form class="guestreg"> 
-    <h1>Registrer deg her</h1>
-            <p>Vennligst svar innen 01.10.25 om du kan feire bryllupsdagen med oss</p><br>
+    
+    <h2>REGISTRER DEG HER</h2>
+            <p>Vennligst svar innen 15.09.2025 om du kan komme eller ikke</p><br>
             <hr><br>
 
     <div id="guestcontainer">
@@ -45,7 +46,7 @@
             <label class="radiocontainer">
                 <input class="radio" type="radio" name="attendance" value="no" required>
                 Nei, jeg kan desverre ikke komme
-            </label><br><br>
+            </label>
 
             
             <label id="allergi" for="allergi">Har du allergier? (Valgfritt å svare)</label>
