updated register for mobile/ipad

--- a/registrering/registrering.html
+++ b/registrering/registrering.html
@@ -11,18 +11,30 @@
 
     <!-- <img id="flower1" src="../img/flower1.png" alt="blomst"> -->
 
+ <img class="flower" id="pinkflower1" src="../img/pinkflower.png" alt="">
+    <img class="flower" id="pinkflower2" src="../img/pinkflower.png" alt="">
+    <!-- <img class="flower" id="pinkflower3" src="../img/pinkflower.png" alt="">  -->
+
+    <!-- <img class="flower" id="whiteflower1" src="../img/whiteflower.png" alt=""> -->
+    <!-- <img class="flower" id="whiteflower2" src="../img/whiteflower.png" alt=""> -->
+
+    <img class="flower" id="blueflower1" src="../img/blueflower.png" alt="">
+    <img class="flower" id="blueflower2" src="../img/blueflower.png" alt="">
+
+    <img class="flower" id="orangeflower1" src="../img/orangeflower.png" alt="">
+    <img class="flower" id="orangeflower2" src="../img/orangeflower.png" alt="">
+
+
 <nav class="navbar">
     <ul class="navlist">
-        <li><a id="forside" href="../forside/index.html">FORSIDE</a></li>
-        <li><a id="registrering" href="../registrering/registrering.html">REGISTRERING</a></li>
-        <li><a id="sted" href="../sted/sted.html">STED</a></li>
+        <li><a id="forside" href="../forside/index.html">Forside</a></li>
+        <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
+        <li><a id="sted" href="../sted/sted.html">Sted</a></li>
     </ul>
 </nav>
 
     <h1 id="overskrift">VETLE OG RAGNHILD</h1>
 
-
-<br>
 <form class="guestreg"> 
     
     <h2>REGISTRER DEG HER</h2>
