changes (with flower in css) after talking with Rag

--- a/forside/index.html
+++ b/forside/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ragnhild & Vetle sitt bryllup</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://api.fontshare.com/v2/css?f[]=glacial-indifference@400,700&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <!-- <img id="flower1" src="../img/flower1.png" alt="blomst">
@@ -13,43 +15,45 @@
     <!-- <img id="leaf1" src="../img/leaf.png" alt="leaf">
  -->
 
-
+<!-- 
     <img class="flower" id="pinkflower1" src="../img/pinkflower.png" alt="">
-    <img class="flower" id="pinkflower2" src="../img/pinkflower.png" alt=""> 
-    <img class="flower" id="pinkflower3" src="../img/pinkflower.png" alt=""> 
+    <img class="flower" id="pinkflower2" src="../img/pinkflower.png" alt=""> -->
+    <!-- <img class="flower" id="pinkflower3" src="../img/pinkflower.png" alt="">  -->
 
-    <img class="flower" id="whiteflower1" src="../img/whiteflower.png" alt="">
-    <img class="flower" id="whiteflower2" src="../img/whiteflower.png" alt="">
-
+    <!-- <img class="flower" id="whiteflower1" src="../img/whiteflower.png" alt=""> -->
+    <!-- <img class="flower" id="whiteflower2" src="../img/whiteflower.png" alt=""> -->
+<!-- 
     <img class="flower" id="blueflower1" src="../img/blueflower.png" alt="">
     <img class="flower" id="blueflower2" src="../img/blueflower.png" alt="">
 
     <img class="flower" id="orangeflower1" src="../img/orangeflower.png" alt="">
     <img class="flower" id="orangeflower2" src="../img/orangeflower.png" alt="">
+     -->
 <nav class="navbar">
     <ul class="navlist">
-        <li><a id="forside" href="../forside/index.html">FORSIDE</a></li>
-        <li><a id="registrering" href="../registrering/registrering.html">REGISTRERING</a></li>
-        <li><a id="sted" href="../sted/sted.html">STED</a></li>
+        <li><a id="forside" href="../forside/index.html">Forside</a></li>
+        <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
+        <li><a id="sted" href="../sted/sted.html">Sted</a></li>
     </ul>
 </nav>
 
 
 <div id="overskrift">
-    <h1 id="overskrift2">VETLE & RAGNHILD</h1>
+    <p id="overskrift2">VETLE & RAGNHILD</p>
     <p class="underoverskrift2">15.08.2026</p>
     <!-- <p class="underoverskrift2">KAMPEN KIRKE</p> -->
-    <h3 class="underoverskrift2">VELKOMMEN TIL VÅRT BRYLLUP!</h3>
+    <!-- <h3 class="underoverskrift2">VELKOMMEN TIL VÅRT BRYLLUP!</h3> -->
 </div>
 
 
 <div class="imgcontainer">
-    <img src="hovedbilde.jpg" alt="Bilde av Rag&Vetle">
+    <img src="../forside/bakgrunnsbilde.JPG" alt="Bilde av Rag&Vetle">
 </div>
 
 <div id="invitasjon">
-    <h3>VI ØNSKER DEG HJERTELIG VELKOMMEN TIL VÅRT BRYLLUP</h3>
-    <P>VIELSE KL. 14.30 I KAMPEN KIRKE, ETTERFULGT AV MIDDAG OG FEST PÅ NORDRE SKØYEN HOVEDGÅRD</P>
+    <p>Velkommen til vårt bryllup!</p>
+    <p>På denne nettsiden vil du etterhvert finne all informasjon om bryllupet.</p>
+    <p>Trykk på knappen under for å registrere deg. Frist for registrering: 15.08.25.</p> 
     
 </div>
 
