--- a/registrering/registrering.html
+++ b/registrering/registrering.html
@@ -6,23 +6,9 @@
     <title>Registrering</title>
     <link rel="stylesheet" href="registrering.css" />
     <script src="https://kit.fontawesome.com/254bbe4568.js" crossorigin="anonymous"></script>
+    <link href="https://api.fontshare.com/v2/css?f[]=glacial-indifference@400,700&display=swap" rel="stylesheet">
   </head>
  <body>
-
-    <!-- <img id="flower1" src="../img/flower1.png" alt="blomst"> -->
-
- <img class="flower" id="pinkflower1" src="../img/pinkflower.png" alt="">
-    <img class="flower" id="pinkflower2" src="../img/pinkflower.png" alt="">
-    <!-- <img class="flower" id="pinkflower3" src="../img/pinkflower.png" alt="">  -->
-
-    <!-- <img class="flower" id="whiteflower1" src="../img/whiteflower.png" alt=""> -->
-    <!-- <img class="flower" id="whiteflower2" src="../img/whiteflower.png" alt=""> -->
-
-    <img class="flower" id="blueflower1" src="../img/blueflower.png" alt="">
-    <img class="flower" id="blueflower2" src="../img/blueflower.png" alt="">
-
-    <img class="flower" id="orangeflower1" src="../img/orangeflower.png" alt="">
-    <img class="flower" id="orangeflower2" src="../img/orangeflower.png" alt="">
 
 
 <nav class="navbar">
@@ -33,12 +19,11 @@
     </ul>
 </nav>
 
-    <h1 id="overskrift">VETLE OG RAGNHILD</h1>
+    <p id="overskrift">VETLE & RAGNHILD</p>
 
 <form class="guestreg"> 
-    
-    <h2>REGISTRER DEG HER</h2>
-            <p>Vennligst svar innen 15.09.2025 om du kan komme eller ikke</p><br>
+    <p id="underoverskrift">REGISTRER DEG HER</p>
+            
             <hr><br>
 
     <div id="guestcontainer">
@@ -67,7 +52,7 @@
     </div>
         <button type="button" id="regflere"> <i class="fa-solid fa-plus"></i> Registrer flere</button>
         <br><br>
-        <button id="sendinn">Send inn</button>
+        <button id="sendinn">SEND INN</button>
 </form>
 <script src="../registrering/registrering.js"></script>
 </body>
