første utkast, uten backend

--- a/confirmation/confirmation.html
+++ b/confirmation/confirmation.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Takk for registrering</title>
     <link rel="stylesheet" href="confirmation.css" />
+     <link href="https://api.fontshare.com/v2/css?f[]=glacial-indifference@400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     
-<h1>Takk for registreringen!</h1>
-<button id="forsidebtn">Forside</button>
-
-<div class="call">
-    <h3>Ved spørsmål ring Ragnhild her:</h3>
-    <button id="callbtn"><a href="tel:+4791826229">942 77 901</a></button>
+<div class="container">
+  <p>Takk for registreringen!</p>
+  <p>Bekreftelse vil bli sendt til deg på mail.</p>
+  <button id="forsidebtn">Tilbake til forsiden</button>
 </div>
+
+
 
 
 
