--- a/forside/index.html
+++ b/forside/index.html
@@ -9,31 +9,12 @@
 
   </head>
   <body>
-    <!-- <img id="flower1" src="../img/flower1.png" alt="blomst">
-  -->
 
-    <!-- <img id="leaf1" src="../img/leaf.png" alt="leaf">
- -->
-
-<!-- 
-    <img class="flower" id="pinkflower1" src="../img/pinkflower.png" alt="">
-    <img class="flower" id="pinkflower2" src="../img/pinkflower.png" alt=""> -->
-    <!-- <img class="flower" id="pinkflower3" src="../img/pinkflower.png" alt="">  -->
-
-    <!-- <img class="flower" id="whiteflower1" src="../img/whiteflower.png" alt=""> -->
-    <!-- <img class="flower" id="whiteflower2" src="../img/whiteflower.png" alt=""> -->
-<!-- 
-    <img class="flower" id="blueflower1" src="../img/blueflower.png" alt="">
-    <img class="flower" id="blueflower2" src="../img/blueflower.png" alt="">
-
-    <img class="flower" id="orangeflower1" src="../img/orangeflower.png" alt="">
-    <img class="flower" id="orangeflower2" src="../img/orangeflower.png" alt="">
-     -->
 <nav class="navbar">
     <ul class="navlist">
         <li><a id="forside" href="../forside/index.html">Forside</a></li>
         <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
-        <li><a id="sted" href="../sted/sted.html">Sted</a></li>
+        <!-- <li><a id="sted" href="../sted/sted.html">Sted</a></li> -->
     </ul>
 </nav>
 
@@ -41,8 +22,7 @@
 <div id="overskrift">
     <p id="overskrift2">VETLE & RAGNHILD</p>
     <p class="underoverskrift2">15.08.2026</p>
-    <!-- <p class="underoverskrift2">KAMPEN KIRKE</p> -->
-    <!-- <h3 class="underoverskrift2">VELKOMMEN TIL VÅRT BRYLLUP!</h3> -->
+    
 </div>
 
 
