--- a/forside/index.html
+++ b/forside/index.html
@@ -20,7 +20,7 @@
 
 
 <div id="overskrift">
-    <p id="overskrift2">VETLE & RAGNHILD</p>
+    <p id="overskrift2">RAGNHILD & VETLE</p>
     <p class="underoverskrift2">15.08.2026</p>
     
 </div>
