--- a/registrering/registrering.html
+++ b/registrering/registrering.html
@@ -19,7 +19,7 @@
     </ul>
 </nav>
 
-    <p id="overskrift">VETLE & RAGNHILD</p>
+    <p id="overskrift">RAGNHILD & VETLE</p>
 
 <form class="guestreg" id="guestForm"> 
     <p id="underoverskrift">REGISTRER DEG HER</p>
