connect to supabase backend

--- a/confirmation/confirmation.html
+++ b/confirmation/confirmation.html
@@ -8,11 +8,20 @@
      <link href="https://api.fontshare.com/v2/css?f[]=glacial-indifference@400,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    
+
+
 <div class="container">
   <p>Takk for registreringen!</p>
   <p>Bekreftelse vil bli sendt til deg på mail.</p>
   <button id="forsidebtn">Tilbake til forsiden</button>
+
+  <div class="imgcontainer">
+    <img src="../forside/bakgrunnsbilde.JPG" alt="Bilde av Rag&Vetle">
+</div>
+
+  <p>Har du gjort noe feil, kan du trykke på knappen under for å registrere på nytt.</p>
+  <button id="registrerbtn">Registrer på nytt</button>
+  <p>Fristen for å endre din registrering er 15.08.25.</p>
 </div>
 
 
