last finish on the confirmation html

--- a/forside/index.html
+++ b/forside/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <div id="regbutton">
-    <button>REGISTRER DEG HER</button>
+    <button>REGISTRER DEG HER</button> <br><br>
 </div>
 
 
