--- a/confirmation/confirmation.html
+++ b/confirmation/confirmation.html
@@ -11,17 +11,19 @@
 
 
 <div class="container">
-  <p>Takk for registreringen!</p>
+  <p id="takk">Takk for registreringen!</p>
   <p>Bekreftelse vil bli sendt til deg på mail.</p>
   <button id="forsidebtn">Tilbake til forsiden</button>
 
   <div class="imgcontainer">
     <img src="../forside/bakgrunnsbilde.JPG" alt="Bilde av Rag&Vetle">
 </div>
-
+<br><br>
+<div class="registrernytt">
   <p>Har du gjort noe feil, kan du trykke på knappen under for å registrere på nytt.</p>
   <button id="registrerbtn">Registrer på nytt</button>
-  <p>Fristen for å endre din registrering er 15.08.25.</p>
+  <p>Fristen for ny registrering er 15.08.25.</p>
+</div>
 </div>
 
 
