Move index to root

--- a/sted/sted.html
+++ b/sted/sted.html
@@ -31,7 +31,7 @@
 
 <nav class="navbar">
     <ul class="navlist">
-        <li><a id="forside" href="../forside/index.html">Forside</a></li>
+        <li><a id="forside" href="index.html">Forside</a></li>
         <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
         <li><a id="sted" href="../sted/sted.html">Sted</a></li>
     </ul>
