--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ragnhild & Vetle sitt bryllup</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../forside/style.css" />
     <link href="https://api.fontshare.com/v2/css?f[]=glacial-indifference@400,700&display=swap" rel="stylesheet">
 
   </head>
@@ -12,7 +12,7 @@
 
 <nav class="navbar">
     <ul class="navlist">
-        <li><a id="forside" href="../forside/index.html">Forside</a></li>
+        <li><a id="forside" href="index.html">Forside</a></li>
         <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
 
     </ul>
