--- a/registrering/registrering.html
+++ b/registrering/registrering.html
@@ -13,7 +13,7 @@
 
 <nav class="navbar">
     <ul class="navlist">
-        <li><a id="forside" href="../forside/index.html">Forside</a></li>
+        <li><a id="forside" href="../index.html">Forside</a></li>
         <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
     </ul>
 </nav>
