move css and img into root

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ragnhild & Vetle sitt bryllup</title>
-    <link rel="stylesheet" href="../forside/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link href="https://api.fontshare.com/v2/css?f[]=glacial-indifference@400,700&display=swap" rel="stylesheet">
 
   </head>
@@ -12,7 +12,7 @@
 
 <nav class="navbar">
     <ul class="navlist">
-        <li><a id="forside" href="index.html">Forside</a></li>
+        <li><a id="forside" href="../index.html">Forside</a></li>
         <li><a id="registrering" href="../registrering/registrering.html">Registrering</a></li>
 
     </ul>
@@ -27,7 +27,7 @@
 
 
 <div class="imgcontainer">
-    <img src="../forside/bakgrunnsbilde.JPG" alt="Bilde av Rag&Vetle">
+    <img src="bakgrunnsbilde.JPG" alt="Bilde av Rag&Vetle">
 </div>
 
 <div id="invitasjon">
@@ -45,6 +45,6 @@
 
 
 
-    <script src="../forside/index.js"></script>
+    <script src="../index.js"></script>
   </body>
 </html>
