img into confirmation html

--- a/confirmation/confirmation.html
+++ b/confirmation/confirmation.html
@@ -16,7 +16,7 @@
   <button id="forsidebtn">Tilbake til forsiden</button>
 
   <div class="imgcontainer">
-    <img src="../forside/bakgrunnsbilde.JPG" alt="Bilde av Rag&Vetle">
+    <img src="../bakgrunnsbilde.JPG" alt="Bilde av Rag&Vetle">
 </div>
 <br><br>
 <div class="registrernytt">
