--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ragnhild & Vetle sitt bryllup</title>
+    <title>Ragnhild & Vetle gifter seg!</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://api.fontshare.com/v2/css?f[]=glacial-indifference@400,700&display=swap" rel="stylesheet">
 
