Changed color on btn and last finish before the site is up

--- a/confirmation/confirmation.html
+++ b/confirmation/confirmation.html
@@ -17,20 +17,18 @@
 
   <div class="imgcontainer">
     <img src="../bakgrunnsbilde.JPG" alt="Bilde av Rag&Vetle">
-</div>
+  </div>
 <br><br>
-<div class="registrernytt">
-  <p>Har du gjort noe feil, kan du trykke på knappen under for å registrere på nytt.</p>
-  <button id="registrerbtn">Registrer på nytt</button>
-  <p>Fristen for ny registrering er 15.08.25.</p>
+  <div class="registrernytt">
+    <p>Har du gjort noe feil, kan du trykke på knappen under for å registrere på nytt.</p>
+    <button id="registrerbtn">Registrer på nytt</button>
+    <p>Fristen for ny registrering er 15.08.25.</p>
+  </div>
 </div>
-</div>
-
-
-
-
 
 
 
 <script src="../confirmation/confirmation.js"></script>    
-  </body>
+</body>
+
+</html>
